# PySEREP

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  codecov.yml  conftest.py  paper.bib  paper.md  pyproject.toml  zenodo.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
benchmarks/: README.md  benchmark_dof_selectors.py  benchmark_pipeline.py
docs/source/: changelog.rst  conf.py  index.rst  installation.rst  quickstart.rst  theory.rst
docs/source/api/: analysis.rst  core.rst  frf.rst  index.rst  io.rst  models.rst  pipeline.rst  selection.rst  utils.rst  visualization.rst
examples/: 01_quick_start.py  02_pipeline_garteur.py  03_dof_selector_comparison.py  04_direct_vs_modal_frf.py  05_convergence_study.py  06_hyapa_material.py  07_euler_beam.py  08_plate_2d.py  README.md
pyserep/: __init__.py  cli.py
pyserep/analysis/: __init__.py  convergence.py  performance.py  sensitivity.py  validation.py
pyserep/core/: __init__.py  eigensolver.py  rom_builder.py
pyserep/frf/: __init__.py  direct_frf.py  modal_frf.py
pyserep/io/: __init__.py  exporter.py  matrix_loader.py  mesh_writer.py
pyserep/models/: __init__.py  synthetic.py
pyserep/pipeline/: __init__.py  config.py  serep_pipeline.py
pyserep/selection/: __init__.py  band_selector.py  dof_selector.py  mode_selector.py
pyserep/utils/: __init__.py  linalg.py  sparse_ops.py  timers.py
pyserep/visualization/: __init__.py  frf_plots.py  mode_plots.py  summary_plots.py
tests/: conftest.py
tests/integration/: test_full_pipeline.py  test_mesh_export.py
tests/unit/: test_band_selector.py  test_cli.py  test_convergence.py  test_direct_frf.py  test_dof_selector.py  test_eigensolver.py  test_io.py  test_linalg.py  test_modal_frf.py  test_mode_selector.py  test_performance.py  test_pipeline_config.py  test_rom_builder.py  test_sensitivity.py  test_sparse_ops.py  test_synthetic_models.py  test_validation.py
