[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyserep"
version = "3.0.0"
description = "System Equivalent Reduction Expansion Process (SEREP) — production-grade Reduced Order Modelling for large-scale structural dynamics problems"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Krithish Surya S", email = "krithishsurya@gmail.com" },
]
keywords = [
  "SEREP", "reduced order model", "structural dynamics",
  "finite element", "FRF", "vibration",
  "model order reduction", "dynamic substructuring",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
io-extra = ["h5py>=3.8", "meshio>=5.3"]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "black>=23.0",
  "ruff>=0.1",
  "mypy>=1.5",
  "sphinx>=7.0",
  "sphinx-rtd-theme>=1.3",
  "numpydoc>=1.6",
]

[project.scripts]
pyserep = "pyserep.cli:main"

[project.urls]
Homepage     = "https://github.com/KrithishSurya/PySEREP"
Documentation = "https://PySEREP.readthedocs.io"
Repository   = "https://github.com/KrithishSurya/PySEREP.git"
Issues       = "https://github.com/KrithishSurya/PySEREP/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyserep*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["pyserep"]
omit   = ["*/tests/*", "*/examples/*", "*/benchmarks/*"]

[tool.coverage.report]
show_missing  = true
skip_covered  = false
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff.isort]
known-first-party = ["pyserep"]
